fix: add FFM enabling flags to java calls in milter and appserver